--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "jwt-decode": "^2.2.0",
+    "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-router-flux": "^4.0.6",
@@ -37,6 +38,7 @@
     "preset": "react-native",
     "setupFiles": [
       "<rootDir>/tests/setup.js"
-    ]
+    ],
+    "collectCoverage": true
   }
 }
