--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.54.1",
     "react-dom": "^16.8.6",
-    "react-test-renderer": "16.8.3"
+    "react-test-renderer": "16.8.3",
+    "redux-saga-testing": "^1.0.5"
   },
   "jest": {
     "preset": "react-native",
