--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest --watch"
+    "test": "jest --watch — verbose"
   },
   "dependencies": {
     "axios": "^0.19.0",
